# linear_regression_api

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
linear_regression_api/dataset/: make_dataset.py
linear_regression_api/features/: build_features.py
linear_regression_api/models/: deep_api.py
linear_regression_api/tests/: test_unit_model.py
linear_regression_api/visualization/: visualize.py
notebooks/: 1.0-linear_regression_api_start.ipynb
