# -*- coding: utf-8 -*-
[metadata]
name = linear_regression_api
summary = This is API to be exposed as REST API over ML Models
description-file =
    README.md
author = Hem Chandra Padhalni
author-email = hem@xyz.com
version = 0.1.0
license = No license file
home-page = https://github.com/shramanpadhalni-web/linear_regression_api
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    linear_regression_api

[entry_points]

deepaas.v2.model = 
    linear_regression_api = linear_regression_api.models.deep_api

